forgejo-ton/ingress-ts.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo-tailscale
  namespace: forgejo
spec:
  selector:
    app.kubernetes.io/instance: forgejo-release
    app.kubernetes.io/name: forgejo
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
