forgejo-ton/destination-rule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: forgejo
spec:
  host: forgejo-release-http.forgejo.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        idleTimeout: 3s
        maxConnections: 100
        connectTimeout: 30ms
        tcpKeepalive:
          time: 3s
          interval: 75s
