forgejo-ton/virtualservice.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: forgejo
  namespace: forgejo
spec:
  hosts:
    - forgejo.lag0.com.br
    - git.lag0.com.br
  gateways:
    - istio-system/lag0-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: forgejo-release-http
            port:
              number: 3000
      timeout: 300s
